# Captions

./: .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: build-ffmpeg.sh  build-whisper.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  models.rs  subtitles.rs  whisper.rs
src/components/: ExpandableList.tsx  FileUpload.tsx  LanguageItem.tsx  LanguageSelect.tsx  ModelItem.tsx  ModelSelect.tsx  TranscribeForm.tsx  TranscriptionResult.tsx
src/components/forms/: ExpandableList.tsx  FileUpload.tsx  TranscribeForm.tsx  TranscriptionResult.tsx  glow.css
src/components/language/: ExpandableList.tsx  LanguageItem.tsx  LanguageSelect.tsx
src/components/model/: ModelDetailCard.tsx  ModelItem.tsx  ModelSelect.tsx  modelItemAnimations.css
src/components/ui/: Card.tsx  button.tsx
src/hooks/: useModel.ts  useSubtitles.ts  useTranscription.ts  useWhisper.ts
src/pages/: home.tsx
