[package]
name = "Captions"
version = "0.1.0"
description = "A simple app to create subtitles from audio and video files. All locally, on device with the magic of a Whisper 🪄"
authors = ["Zias van Nes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "captions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
srtlib = "0.2"
regex = "1"
once_cell = "1.21.3"
sha1 = "0.10.6"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
